# Cliently-Neo

./: .gitignore  README.md  constitution.md  run-daemon.sh
App Documentation Pack/: AGENTS.md  APP-FLOW.md  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION-PLAN.md  PRD.md  TRD.md  UI-UX.md
App Documentation Pack Open Claw (1)/: AGENTS.md  APP-FLOW.md  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION-PLAN.md  PRD.md  TRD.md  UI-UX.md
app/: Project.swift  package.sh
app/Neo.xcodeproj/: project.pbxproj
app/Neo.xcodeproj/xcshareddata/xcschemes/: Neo.xcscheme
app/Neo.xcodeproj/xcuserdata/albin.xcuserdatad/xcschemes/: xcschememanagement.plist
app/Neo.xcworkspace/: contents.xcworkspacedata
app/Neo.xcworkspace/xcshareddata/xcschemes/: Generate Project.xcscheme  Neo-Workspace.xcscheme
app/Neo.xcworkspace/xcuserdata/albin.xcuserdatad/xcschemes/: xcschememanagement.plist
app/Sources/: MainView.swift  MarkdownView.swift  NeoApp.swift  Store.swift
daemon/: main.py  pyproject.toml  test_broadcast.py  test_openclaw.py
daemon/src/: __init__.py  database.py  main.py
daemon/src/engines/: __init__.py  broadcaster.py  context.py  indexer.py  llm.py  mcp_manager.py  memory.py  mulch.py  openclaw.py  orchestrator.py  skill_manager.py  telegram_bot.py  tool_manager.py
